--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
             </goals>
             <configuration>
               <outputDirectory>${project.build.directory}</outputDirectory>
-              <excludeArtifacts>junit</excludeArtifacts>
+              <includeScope>runtime</includeScope>
             </configuration>
           </execution>
         </executions>
